k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: right-backend
  labels:
    name: right-backend
    app: right-system
