k8s/logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash-service
  namespace: right-backend
  labels:
    app: logstash
spec:
  type: ExternalName
  externalName: 192.168.0.106  # 主機 IP
  ports:
  - port: 5000
    targetPort: 5000
    name: tcp-json
  - port: 5044
    targetPort: 5044
    name: beats
