k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: right-backend-service
  namespace: right-backend
  labels:
    app: right-backend
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: right-backend
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: right-backend-nodeport
  namespace: right-backend
  labels:
    app: right-backend
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30082
    protocol: TCP
    name: http
  selector:
    app: right-backend
  sessionAffinity: None
